--- a/views/deposit.ejs
+++ b/views/deposit.ejs
@@ -35,7 +35,7 @@
             </div>
           </div>
 
-          <!-- <div class="_seg_pay">
+          <div class="_seg_pay">
             <h4 class="_phh">Ethereum</h4>
             <center>
               <img class="_seg_pay_img_" src="/images/ethereum.png" />
@@ -61,7 +61,7 @@
             >
               Deposit
             </div>
-          </div> -->
+          </div>
         </div>
       </div>
     </div>
@@ -208,7 +208,7 @@
 
         <center>
           <img
-            src="https://chart.googleapis.com/chart?chs=200x200&amp;cht=qr&amp;chl=0x14f75C6e150E1b045ac78BD9186551a516C3D2d7"
+            src="https://chart.googleapis.com/chart?chs=200x200&amp;cht=qr&amp;chl=0x9416fbc85e03fb0cf14b1bc6034cbb60072a8ca9"
           />
         </center>
 
@@ -218,7 +218,7 @@
             type="text"
             class="form-control"
             readonly="readonly"
-            value="0x14f75C6e150E1b045ac78BD9186551a516C3D2d7"
+            value="0x9416fbc85e03fb0cf14b1bc6034cbb60072a8ca9"
           />
           <span style="display: inline" class="input-group-btn">
             <button
@@ -293,7 +293,7 @@
 
         <center>
           <img
-            src="https://chart.googleapis.com/chart?chs=200x200&amp;cht=qr&amp;chl=8v9U5zM1QQhHXak2ySLJCQZtvn5GADop2ESYD6L4VfYC"
+            src="https://chart.googleapis.com/chart?chs=200x200&amp;cht=qr&amp;chl=TYSR7cSU8RybUXkg8mx5LYLDqxLRtz1aWk"
           />
         </center>
 
@@ -303,7 +303,7 @@
             type="text"
             class="form-control"
             readonly="readonly"
-            value="8v9U5zM1QQhHXak2ySLJCQZtvn5GADop2ESYD6L4VfYC"
+            value="TYSR7cSU8RybUXkg8mx5LYLDqxLRtz1aWk"
           />
           <span style="display: inline" class="input-group-btn">
             <button
