--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -404,7 +404,8 @@
     <a href="#" id="back-to-top" class="back-to-top fa fa-arrow-up"></a>
     <!-- Back To Top Ends  -->
 
-    <script src="//code.tidio.co/ujshb5g9r7oocd901mpz6d0d1xk1i2ci.js" async></script>
+    <script src="//code.jivosite.com/widget/7h6qCKDQAZ" async></script>
+
     <!-- Template JS Files -->
     <script src="web/js/jquery-2.2.4.min.js"></script>
     <script src="web/js/bootstrap.min.js"></script>
