--- a/views/layout2.ejs
+++ b/views/layout2.ejs
@@ -2385,9 +2385,6 @@
         });
       });
     </script>
-    <script
-      src="//code.tidio.co/ujshb5g9r7oocd901mpz6d0d1xk1i2ci.js"
-      async
-    ></script>
+    <script src="//code.jivosite.com/widget/7h6qCKDQAZ" async></script>
   </body>
 </html>
